--- a/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1/_Imports.razor
+++ b/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1/_Imports.razor
@@ -5,6 +5,7 @@
 
 @*#endif*@
 @using System.Net.Http
+@using System.Reflection
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
