--- a/src/MauiTemplatesCLI/MauiShell/MauiShell.1Shell.xaml
+++ b/src/MauiTemplatesCLI/MauiShell/MauiShell.1Shell.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <Shell
-    x:Class="MyApp.Namespace.MauiShell__1"
+    x:Class="MyApp.Namespace.MauiShell__1Shell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:d="http://schemas.microsoft.com/dotnet/2021/maui/design"
