--- a/src/MauiTemplatesCLI/MauiShell/MauiShell.1Shell.xaml
+++ b/src/MauiTemplatesCLI/MauiShell/MauiShell.1Shell.xaml
@@ -1,4 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" ?>
+<!--#if (RootFolder)-->
+<Shell
+    x:Class="MyApp.RootNamespace.MauiShell__1Shell"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:d="http://schemas.microsoft.com/dotnet/2021/maui/design"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:MyApp.RootNamespace"
+    mc:Ignorable="d">
+<!--#else-->
 <Shell
     x:Class="MyApp.Namespace.MauiShell__1Shell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
@@ -7,6 +17,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:local="clr-namespace:MyApp.Namespace"
     mc:Ignorable="d">
+<!--#endif-->
     <!--
         The overall app visual hierarchy is defined here, along with navigation.
         Ensure atleast a Flyout item or a TabBar is defined for Shell to work
