--- a/src/MauiTemplatesCLI/MauiBlazorWebView/MauiBlazorWebView.1Page.xaml
+++ b/src/MauiTemplatesCLI/MauiBlazorWebView/MauiBlazorWebView.1Page.xaml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!--#if (Net8)-->
+<!--#if (RootFolder)-->
 <ContentPage
-    x:Class="MyApp.Namespace.MauiBlazorWebView__1"
+    x:Class="MyApp.RootNamespace.MauiBlazorWebView__1"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:b="clr-namespace:Microsoft.AspNetCore.Components.WebView.Maui;assembly=Microsoft.AspNetCore.Components.WebView.Maui"
     xmlns:d="http://schemas.microsoft.com/dotnet/2021/maui/design"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:local="clr-namespace:MyApp.LocalNamespace"
+    xmlns:local="clr-namespace:MyApp.RootNamespace"
     mc:Ignorable="d">
     <ContentPage.Content>
         <Grid>
@@ -28,9 +29,35 @@
     x:Class="MyApp.Namespace.MauiBlazorWebView__1"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:b="clr-namespace:Microsoft.AspNetCore.Components.WebView.Maui;assembly=Microsoft.AspNetCore.Components.WebView.Maui"
     xmlns:d="http://schemas.microsoft.com/dotnet/2021/maui/design"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:local="clr-namespace:MyApp.LocalNamespace"
+    xmlns:local="clr-namespace:MyApp.RootNamespace"
+    mc:Ignorable="d">
+    <ContentPage.Content>
+        <Grid>
+            <b:BlazorWebView
+                HostPage="wwwroot/index.html"
+                StartPath="/">
+                <b:BlazorWebView.RootComponents>
+                    <b:RootComponent
+                        Selector="#app"
+                        ComponentType="{x:Type local:Main}" />
+                </b:BlazorWebView.RootComponents>
+            </b:BlazorWebView>
+        </Grid>
+    </ContentPage.Content>
+</ContentPage>
+<!--#endif-->
+<!--#else-->
+<!--#if (RootFolder)-->
+<ContentPage
+    x:Class="MyApp.RootNamespace.MauiBlazorWebView__1"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:d="http://schemas.microsoft.com/dotnet/2021/maui/design"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:MyApp.RootNamespace"
     mc:Ignorable="d">
     <ContentPage.Content>
         <Grid>
@@ -44,4 +71,26 @@
         </Grid>
     </ContentPage.Content>
 </ContentPage>
+<!--#else-->
+<ContentPage
+    x:Class="MyApp.Namespace.MauiBlazorWebView__1"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:d="http://schemas.microsoft.com/dotnet/2021/maui/design"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:MyApp.RootNamespace"
+    mc:Ignorable="d">
+    <ContentPage.Content>
+        <Grid>
+            <BlazorWebView HostPage="wwwroot/index.html">
+                <BlazorWebView.RootComponents>
+                    <RootComponent
+                        Selector="#app"
+                        ComponentType="{x:Type local:Main}" />
+                </BlazorWebView.RootComponents>
+            </BlazorWebView>
+        </Grid>
+    </ContentPage.Content>
+</ContentPage>
+<!--#endif-->
 <!--#endif-->
