--- a/src/MauiTemplatesCLI/MauiResDict/MauiResDict.1.xaml
+++ b/src/MauiTemplatesCLI/MauiResDict/MauiResDict.1.xaml
@@ -1,12 +1,36 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!--#if (NoCodeBehind || XamlOnly)-->
 <?xaml-comp compile="true" ?>
+<!--#if (RootFolder)-->
+<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:d="http://schemas.microsoft.com/dotnet/2021/maui/design"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:MyApp.RootNamespace"
+    mc:Ignorable="d">
+    <!-- Define your resources here -->
+</ResourceDictionary>
+<!--#else-->
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:d="http://schemas.microsoft.com/dotnet/2021/maui/design"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:local="clr-namespace:MyApp.Namespace"
+    mc:Ignorable="d">
+    <!-- Define your resources here -->
+</ResourceDictionary>
+<!--#endif-->
+<!--#else-->
+<!--#if (RootFolder)-->
+<ResourceDictionary
+    x:Class="MyApp.RootNamespace.MauiResDict__1"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:d="http://schemas.microsoft.com/dotnet/2021/maui/design"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:MyApp.RootNamespace"
     mc:Ignorable="d">
     <!-- Define your resources here -->
 </ResourceDictionary>
@@ -21,4 +45,5 @@
     mc:Ignorable="d">
     <!-- Define your resources here -->
 </ResourceDictionary>
+<!--#endif-->
 <!--#endif-->
