--- a/src/MauiTemplatesCLI/MauiView/MauiView.1View.xaml
+++ b/src/MauiTemplatesCLI/MauiView/MauiView.1View.xaml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!--#if (XamlOnly)-->
 <?xaml-comp compile="true" ?>
+<!--#if (RootFolder)-->
+<ContentView
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:d="http://schemas.microsoft.com/dotnet/2021/maui/design"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:MyApp.RootNamespace"
+    mc:Ignorable="d">
+<!--#else-->
 <ContentView
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
@@ -8,16 +17,17 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:local="clr-namespace:MyApp.Namespace"
     mc:Ignorable="d">
-    <ContentView.Content>
-        <Grid>
-            <Label
-                HorizontalOptions="Center"
-                Text="Welcome to .NET MAUI!!!"
-                TextColor="Purple"
-                VerticalOptions="Center" />
-        </Grid>
-    </ContentView.Content>
-</ContentView>
+<!--#endif-->
+<!--#else-->
+<!--#if (RootFolder)-->
+<ContentView
+    x:Class="MyApp.RootNamespace.MauiView__1View"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:d="http://schemas.microsoft.com/dotnet/2021/maui/design"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:MyApp.RootNamespace"
+    mc:Ignorable="d">
 <!--#else-->
 <ContentView
     x:Class="MyApp.Namespace.MauiView__1View"
@@ -27,9 +37,12 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:local="clr-namespace:MyApp.Namespace"
     mc:Ignorable="d">
+<!--#endif-->
+<!--#endif-->
     <ContentView.Content>
         <Grid>
             <Label
+                FontSize="18"
                 HorizontalOptions="Center"
                 Text="Welcome to .NET MAUI!!!"
                 TextColor="Purple"
@@ -37,4 +50,3 @@
         </Grid>
     </ContentView.Content>
 </ContentView>
-<!--#endif-->
