--- a/src/ItemTemplates/MauiBlazorWebView/MauiBlazorWebView.xaml
+++ b/src/ItemTemplates/MauiBlazorWebView/MauiBlazorWebView.xaml
@@ -3,7 +3,7 @@
     x:Class="$rootnamespace$.$safeitemname$"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-$if$ ($net8$ == true)
+$if$ ($net8orlater$ == true)
     xmlns:b="clr-namespace:Microsoft.AspNetCore.Components.WebView.Maui;assembly=Microsoft.AspNetCore.Components.WebView.Maui"
 $endif$
     xmlns:d="http://schemas.microsoft.com/dotnet/2021/maui/design"
@@ -12,7 +12,7 @@ $endif$
     mc:Ignorable="d">
     <ContentPage.Content>
         <Grid>
-$if$ ($net8$ == true)
+$if$ ($net8orlater$ == true)
             <b:BlazorWebView
                 HostPage="wwwroot/index.html"
                 StartPath="/">
